--- a/app/scss/variables.scss
+++ b/app/scss/variables.scss
@@ -1,5 +1,10 @@
 //bacgrounds
 $body-bg: #ff55;
+$header-bg: #131417;
+$site-list-color: #fafafa;
+$menu-list-item-color: #252830;
+$menu-list-item-hover: #eb5757;
+$menu-list-item-borders:rgba(255, 255, 255, 0.1);
 
 //fonts
 $basic-family: 'Roboto', Arial, Helvetica, sans-serif;
