--- a/app/scss/variables.scss
+++ b/app/scss/variables.scss
@@ -4,6 +4,7 @@ $header-bg: #131417;
 $site-list-color: #fafafa;
 $menu-list-item-color: #252830;
 $menu-list-item-hover: #eb5757;
+$drop-triangle: #F2994A;
 $menu-list-item-borders:rgba(255, 255, 255, 0.1);
 
 //fonts
