--- a/app/scss/general.scss
+++ b/app/scss/general.scss
@@ -1,25 +1,47 @@
-.list-style {
-    list-style-type: none;
-    color: $site-list-color;
-    border-radius: 8px;
-    background-color: $menu-list-item-color;
+// .list-style {
+//     list-style-type: none;
+//     color: $site-list-color;
+//     border-radius: 8px;
+//     background-color: $menu-list-item-color;
+// }
+
+// .item-style {
+//     border-bottom: 1px solid $menu-list-item-borders;
+//     padding: 8px 0 8px 18px;
+
+//     &:hover {
+//         background-color: $header-bg;
+//     }
+// }
+
+// .link-style {
+//     text-decoration: none;
+//     color: $site-list-color;
+// }
+
+// img {
+//     max-width: 100%;
+//     height: auto;
+// }
+
+
+.drop{
+    position: relative;
 }
 
-.item-style {
-    border-bottom: 1px solid $menu-list-item-borders;
-    padding: 8px 0 8px 18px;
-
-    &:hover {
-        background-color: $header-bg;
-    }
+.drop:after{
+    content: '';
+    border: 4px solid;
+    border-color: transparent;
+    border-top-color: $drop-triangle;
+    border-bottom: 0;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    margin-top: -2px;
+    transition: transform .2s ease;
 }
 
-.link-style {
-    text-decoration: none;
-    color: $site-list-color;
-}
-
-img {
-    max-width: 100%;
-    height: auto;
+.drop:hover:after{
+    transform: rotate(-90deg);
 }
