--- a/app/scss/general.scss
+++ b/app/scss/general.scss
@@ -42,6 +42,10 @@
     transition: transform .2s ease;
 }
 
-.drop:hover:after{
+.drop:hover:after {
+    transform: rotate(180deg);
+}
+
+.drop:last-child:hover:after {
     transform: rotate(-90deg);
 }
