--- a/app/scss/blocks/dropdown.scss
+++ b/app/scss/blocks/dropdown.scss
@@ -1,10 +1,7 @@
-.dropdown__link{
-    display: block;
-    padding: 8px 18px;
-    color: $site-list-color;
-    font: 18px/24px Roboto, Arial, sans-serif;
-    text-decoration: none;
-}
+// .dropdown__item {
+//     text-overflow: ellipsis;
+//     height: 40px;
+// }
 
 .dropdown{
     padding: 0;
@@ -16,6 +13,14 @@
     background-color: $menu-list-item-color;
     font: 16px/24px Roboto, Arial, sans-serif;
     border-bottom: 1px solid rgba($site-list-color, .1);
+    display: block;
+    padding: 8px 18px;
+    color: $site-list-color;
+    text-decoration: none;
+    
+    &:hover {
+        color: $menu-list-item-hover;
+    }
 }
 
 .dropdown__link:hover {
@@ -25,6 +30,10 @@
 .dropdown__item:last-child .dropdown__link{
     border-radius: 0 0 8px 8px;
     border-bottom: 0;
+}
+
+.nav__drop-2 .dropdown__item:first-child .dropdown__link {
+    border-radius: 8px 8px 0 0;
 }
 
 .dropdown__item:last-child{
