--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -2,126 +2,11 @@
 
 @import "reset"; //сборс стилей
 @import "fonts"; //подключаем шрифты (локально)
-@import "general";
+@import "general.scss";
 
 //подключаем БЭМ блоки
+@import "blocks/page-body.scss";
 @import "blocks/header.scss";
 @import "blocks/nav.scss";
 @import "blocks/dropdown.scss";
-
-
-// .nav__list{
-//     display: flex;
-//     padding: 0;
-//     list-style-type: none;
-// }
-
-// .nav__link,
-// .header__tel, 
-// .dropdown__link{
-//     display: block;
-//     padding: 8px 18px;
-//     color: $site-list-color;
-//     font: 18px/24px Roboto, Arial, sans-serif;
-//     text-decoration: none;
-// }
-
-// .dropdown{
-//     padding: 0;
-//     list-style-type: none;
-//     position: relative;
-// }
-
-// .dropdown__link{
-//     background-color: $menu-list-item-color;
-//     font: 16px/24px Roboto, Arial, sans-serif;
-//     border-bottom: 1px solid rgba($site-list-color, .1);
-// }
-
-// .dropdown__link:hover {
-//     background-color: $header-bg;
-// }
-
-// .dropdown__item:last-child .dropdown__link{
-//     border-radius: 0 0 8px 8px;
-//     border-bottom: 0;
-// }
-
-.nav__drop-2 .dropdown__item:first-child .dropdown__link{
-    border-radius: 8px 8px 0 0;
-}
-
-// .dropdown__item:last-child{
-//     border-bottom: 0;
-// }
-
-// .drop{
-//     position: relative;
-// }
-
-// .drop:after{
-//     content: '';
-//     border: 4px solid;
-//     border-color: transparent;
-//     border-top-color: $drop-triangle;
-//     border-bottom: 0;
-//     position: absolute;
-//     right: 0;
-//     top: 50%;
-//     margin-top: -2px;
-//     transition: transform .2s ease;
-// }
-
-// .drop:hover:after{
-//     transform: rotate(-90deg);
-// }
-
-// .nav__drop{
-//     position: absolute;
-//     opacity: 0;
-//     pointer-events: none;
-//     transform: translateY(10px);
-//     transition: transform .2s ease, opacity .2s ease;
-// }
-
-.drop:hover > .nav__drop{
-    display: block;
-    opacity: 1;
-    pointer-events: auto;
-    transform: translateY(0);
-}
-
-// .dropdown:before{
-//     content: ' ';
-//     position: absolute;
-//     border: 14px solid $menu-list-item-color;
-// }
-
-.nav__drop-1 > .dropdown:before{
-    top: -14px;
-    left: 47px;
-    border-top: 0;
-    border-left-color: transparent;
-    border-right-color: transparent;
-}
-
-// .nav__drop-1{
-//     width: 320px;
-//     left: 0;
-//     padding-top: 20px;
-// }
-
-// .nav__drop-2{
-//     width: 180px;
-//     top: 0;
-//     left: 100%;
-//     padding-left: 22px;
-// }
-
-.nav__drop-2 > .dropdown:before{
-    top: 45px;
-    left: -14px;
-    border-left: 0;
-    border-top-color: transparent;
-    border-bottom-color: transparent;
-}
+@import "blocks/drop.scss";
