--- a/app/scss/variables.scss
+++ b/app/scss/variables.scss
@@ -9,3 +9,6 @@ $menu-list-item-borders:rgba(255, 255, 255, 0.1);
 
 //fonts
 $basic-family: 'Roboto', Arial, Helvetica, sans-serif;
+
+$tablet-width: 768px;
+$mobile-width: 376px;
