--- a/app/scss/blocks/header.scss
+++ b/app/scss/blocks/header.scss
@@ -1,14 +1,3 @@
-// .page-header {
-//     background-color: $header-bg;
-//     display: flex;
-//     align-items: center;
-//     padding: 17px 122px;
-//     box-shadow: 0px 4px 4px rgba($header-bg, 0.4);
-// }
-
-// .page-header__logo {
-//     margin-right: 176px;
-// }
 .header {
     background-color: $header-bg;
     padding-top: 17px;
@@ -17,6 +6,10 @@
     // padding-top: 13px; 
     // padding-bottom: 13px;
     box-shadow: 0px 4px 4px rgba($header-bg, 0.4);
+
+    @media(min-width: $tablet-width) {
+        position: relative;
+    }
 }
 
 .header__wrap {
@@ -55,4 +48,33 @@
     width: 18px;
     height: 18px;
     background: url("../../img/phone.svg") no-repeat 0 0;
+}
+
+.header__toggle {
+
+    @media(min-width: $tablet-width) {
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 2;
+        display: block;
+        width: 70px;
+        height: 50px;
+        background-color: $header-bg;
+        cursor: pointer;
+        border: none;
+    }
+}
+
+.header__toggle::before {
+    @media(min-width: $tablet-width) {
+        content: '';
+        position: absolute;
+        top: 25px;
+        left: 27px;
+        width: 22px;
+        height: 2px;
+        background-color: $drop-triangle;
+        box-shadow: 0 8px 0 0 $drop-triangle, 0 16px 0 0 $drop-triangle;
+    }
 }
