--- a/app/scss/blocks/nav.scss
+++ b/app/scss/blocks/nav.scss
@@ -2,6 +2,10 @@
     display: flex;
     padding: 0;
     list-style-type: none;
+
+    @media (min-width: $tablet-width) {
+        display: none;
+    }
 }
 
 .nav__link {
@@ -30,9 +34,25 @@
     padding-top: 20px;
 }
 
+.nav__drop-1 > .dropdown:before {
+    top: -14px;
+    left: 47px;
+    border-top: 0;
+    border-left-color: transparent;
+    border-right-color: transparent;
+}
+
 .nav__drop-2 {
     width: 210px;
     top: 0;
     left: 100%;
     padding-left: 22px;
+}
+
+.nav__drop-2 > .dropdown:before{
+    top: 45px;
+    left: -14px;
+    border-left: 0;
+    border-top-color: transparent;
+    border-bottom-color: transparent;
 }
