--- a/app/scss/blocks/drop.scss
+++ b/app/scss/blocks/drop.scss
@@ -23,7 +23,7 @@
 }
 
 .drop:last-child::after {
-    right: 15px;
+    right: 7px;
 }
 
 .drop:hover:after {
@@ -32,4 +32,34 @@
 
 .drop:last-child:hover:after {
     transform: rotate(-90deg);
+}
+
+@include tablet {
+    .drop:after {
+        display: none;
+    }
+
+    .drop > .nav__link,
+    .drop > .dropdown__link {
+        display: flex;
+        align-items: center;
+        white-space: normal;
+    }
+
+    .drop > .nav__link:after,
+    .drop > .dropdown__link:after {
+        content: '';
+        border: 4px solid;
+        border-color: transparent;
+        border-top-color: $drop-triangle;
+        border-bottom: 0;
+        margin-left: 8px;
+        flex-shrink: 0;
+
+        &._active {
+            border: 4px solid;
+            border-color: $drop-triangle;
+            border-bottom-color: transparent;
+        }
+    }
 }
