--- a/app/scss/blocks/page-body.scss
+++ b/app/scss/blocks/page-body.scss
@@ -1,20 +1,17 @@
 .page-body {
-    background: url(../../img/alpaca-desktop.jpg) no-repeat 0 0;
-    background-size: cover;
+    background: url(../../img/alpaca-desktop.jpg) no-repeat top 80px center/cover;
+    height: 100vh;
+    position: relative;    
+}
 
-    // width: 1440px;
-    // min-height: 100%;
-    // margin: 0 auto;
-    // padding: 0;
-    // overflow-x: hidden;
-
-    @media (min-width: $tablet-width) {
-        // width: 768px;
-        background: url(../../img/alpaca-tablet.jpg) no-repeat 0 0;
-        background-size: cover;
-      }
-    
-    // @media (min-width: $mobile-width) {
-    //     width: 376px;
-    //   }
+.page-body::after {
+    @include tablet {
+        // position: absolute;
+        // top: 0;
+        // left: 0;
+        // right: 0;
+        // bottom: 0;
+        // content: '';
+        // background-color: rgba(black, 0.5); 
+     }
 }
