--- a/app/scss/blocks/nav.scss
+++ b/app/scss/blocks/nav.scss
@@ -1,6 +1,6 @@
 .nav{
     @include tablet{
-        // display: none;
+        display: none;
         position: fixed;
         top: 80px;
         right: 0;
