--- a/app/scss/blocks/header.scss
+++ b/app/scss/blocks/header.scss
@@ -7,8 +7,9 @@
     // padding-bottom: 13px;
     box-shadow: 0px 4px 4px rgba($header-bg, 0.4);
 
-    @media(min-width: $tablet-width) {
+    @include tablet {
         position: relative;
+        z-index: 1;
     }
 }
 
@@ -52,6 +53,7 @@
     color: $site-list-color;
     @include font(18px, 24px);
     text-decoration: none;
+    margin-right: 200px;
 
     @include mobile {
         display: none;
